Page12 Img movement modified

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
             <div class="page1-sound-text-cantain">
                 <p>SOUND</p>                
             </div>
-        </div>        
-       
+        </div>    
         <div class="page2">
             <div class="page2-top-line"></div>
             <div class="page2-top-nav">
@@ -206,7 +205,7 @@
                 <div class="page6-card1">
                     <div class="page6-card1-img-container">
                         <div class="page6-card-news-container">
-                            <a href="#">NEWS</a>
+                            <p>NEWS</p>
                         </div>
                         <div class="page6-card-bottom-nav">
                             <div class="page6-card-animated-line">
@@ -221,7 +220,8 @@
                 <div class="page6-card2">
                     <div class="page6-card2-img-container">
                         <div class="page6-card-news-container">
-                            <a href="#">NEWS</a>
+                            <p>NEWS</p>
+
                         </div>                    
                         <div class="page6-card-bottom-nav">
                             <div class="page6-card-animated-line">
@@ -236,7 +236,8 @@
                 <div class="page6-card3">
                     <div class="page6-card3-img-container">
                         <div class="page6-card-news-container">
-                            <a href="#">NEWS</a>
+                            <p>NEWS</p>
+
                         </div>                    
                         <div class="page6-card-bottom-nav">
                             <div class="page6-card-animated-line">
